--- a/style.css
+++ b/style.css
@@ -71,6 +71,17 @@ h1 {
     align-items: center;
 }
 
+.file-input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 .upload-btn,
 #reset-btn {
     border: none;
